# robot-web-control

./: .gitignore  README.md  requirements.txt  run.sh  web_control.py  web_control_ui.html
app_core/: __init__.py  emergency_controller.py  event_bus.py  logger.py  state_manager.py  threading_model.py
app_core/remote_control/: __init__.py  auth.py  decorators.py  function_registry.py  server.py  status_broadcaster.py
config/: hardware_config.json  i18n.py  initial_pose.json  settings.py  wok_credentials.example.json
data/dual_arm_steps/: Box2Neutral_pos1.json  Box2Neutral_pos2.json  Box2Neutral_pos3.json  Box2Wok.json  Box2Wok_2.json  Box2Wok_NEW.json  Box_2_Wok.json  Neutral.json  Neutral2Home_pos1.json  Neutral2Home_pos2.json  Neutral2Home_pos3.json  Step_1.json  Step_10.json  Step_3.json  Step_4.json  Step_5.json  dual_arm_poses.json  steps_20260218_144235.json
gui/: __init__.py  base_widget.py  camera_panel.py  connection_check_dialog.py  control_panel.py  log_panel.py  main_window.py  qt_imports.py  signals.py  status_bar.py  theme.py
gui/widgets/: __init__.py  emergency_button.py  hardware_status_card.py  scrollable_area.py  scrollable_frame.py
hardware/: __init__.py  base_hardware.py
hardware/dexhand/: __init__.py  dexhand_controller.py  dexhand_widget.py  dual_dexhand_widget.py  force_grab_controller.py  force_grab_widget.py  hand_configs.py  touch_matrix_widget.py  touch_sensor.py
hardware/dual_arm/: __init__.py  dual_arm_controller.py  dual_arm_lerobot_robot.py  dual_arm_widget.py  joint_control_widget.py  kinematics.py  linker_hand_controller.py  linker_hand_widget.py  pose_control_widget.py  poses.py  state_display_widget.py
hardware/episode/: episode_model.py  episode_widget.py  playback_engine.py
hardware/gripper/: __init__.py  gripper_controller.py  gripper_widget.py
hardware/inventory/: inventory_manager.py
hardware/teleop/: __init__.py  gloves_controller.py  gloves_widget.py  lerobot_exporter.py  master_arm_teleop_widget.py  rl_recording.py  rl_recording_widget.py  ros_connection.py  teleop_controller.py  teleop_widget.py  trajectory_manager.py  trajectory_widget.py  vla_recording.py  vla_recording_widget.py
hardware/wok/: __init__.py  wok_controller.py  wok_widget.py
libs/api_lk73_v1.0.1/: Readme.md
libs/api_lk73_v1.0.1/C/: readme.md
libs/api_lk73_v1.0.1/C++/: readme.md
libs/api_lk73_v1.0.1/C++/include/: lbot_api_cpp.h  lbot_types.h  lbot_version.h
libs/api_lk73_v1.0.1/C/include/: lbot_api.h
libs/api_lk73_v1.0.1/Demo/demo_c++/lbot_fk_ik/: CMakeLists.txt
libs/api_lk73_v1.0.1/Demo/demo_c++/lbot_frame/: CMakeLists.txt
libs/api_lk73_v1.0.1/Demo/demo_c++/lbot_hand/: CMakeLists.txt  run.sh
libs/api_lk73_v1.0.1/Demo/demo_c++/lbot_move/: CMakeLists.txt
libs/api_lk73_v1.0.1/Demo/demo_c++/lbot_move/src/: main.cpp
libs/api_lk73_v1.0.1/Demo/demo_c++/lbot_setting/: CMakeLists.txt
libs/api_lk73_v1.0.1/Demo/demo_c/lbot_fk_ik/: CMakeLists.txt  run.sh
libs/api_lk73_v1.0.1/Demo/demo_c/lbot_frame/: CMakeLists.txt  run.sh
libs/api_lk73_v1.0.1/Demo/demo_c/lbot_hand/: CMakeLists.txt
libs/api_lk73_v1.0.1/Demo/demo_c/lbot_move/: CMakeLists.txt  run.sh
libs/api_lk73_v1.0.1/Demo/demo_c/lbot_move/src/: main.c
libs/api_lk73_v1.0.1/Demo/demo_c/lbot_setting/: CMakeLists.txt  run.sh
libs/api_lk73_v1.0.1/Demo/demo_python/: demo_fk_ik.py  demo_frame.py  demo_hand.py  demo_move.py  demo_setting.py
libs/api_lk73_v1.0.1/Demo/demo_python/lbot/: lbot_api.py
libs/api_lk73_v1.0.1/Python/lbot/: __init__.py  lbot_api.py  lbot_robot.py
libs/linkerhand-python-sdk-main/: README.md  release_3.0.2.txt  requirements.txt
libs/linkerhand-python-sdk-main/LinkerHand/: linker_hand_api.py
libs/linkerhand-python-sdk-main/LinkerHand/config/: L10_positions.yaml  L21_positions.yaml  L25_positions.yaml  L6_positions.yaml  L7_positions.yaml  setting.yaml
libs/linkerhand-python-sdk-main/LinkerHand/core/can/: linker_hand_g20_can.py  linker_hand_l10_can.py  linker_hand_l20_can.py  linker_hand_l21_can.py  linker_hand_l24_can.py  (+4 more)
libs/linkerhand-python-sdk-main/LinkerHand/utils/: color_msg.py  init_linker_hand.py  load_write_yaml.py  mapping.py  open_can.py
(+16 files in other folders)
